Finish running basic tests for full lin ridge simulations.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ LOCAL.py
 
 lin_ridge/search_config/*
 lin_ridge/rslts_pre/*
+lin_ridge/cache/*
 
 !lin_ridge/search_config/test_*
 !lin_ridge/search_config/template_*
